fixed styling issues, reviews doubling when page reloaded.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="" />
     <title>Total Town Car Service</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Gruppo&display=swap"
@@ -21,7 +20,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
     <link rel="icon" href="public/css/images/ttcs.jpeg" />
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="public/css/styles2.css">
     <link rel="stylesheet" href="public/css/test.css">
 </head>
@@ -46,10 +44,10 @@
                         <a class="nav-link text-light text-center" href="form.html">Book Now</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light disabled" href="about.html">About Us</a>
+                        <a class="nav-link text-light" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light disabled" href="#">Pricing</a>
+                        <a class="nav-link text-light" href="pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light " href="reviews.html">Reviews</a>
@@ -68,13 +66,12 @@
                 <a class="nav-link text-center active" aria-current="page" href="index.html">Home</a>
                 <div class="custom-separator mx-auto bg-primary"></div>
                 <a class="nav-link text-center" href="form.html">Book Now</a>
-                <a class="nav-link text-center disabled" href="about.html">About Us</a>
-                <a class="nav-link text-center disabled" href="#">Pricing</a>
+                <a class="nav-link text-center" href="about.html">About Us</a>
+                <a class="nav-link text-center" href="pricing.html">Pricing</a>
                 <a class="nav-link text-center" href="reviews.html">Reviews</a>
             </div>
         </div>
     </div>
-    <!-- Masthead-->
     <header class="masthead">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
@@ -131,7 +128,7 @@
                                 </span><span><img
                                         src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/commuter-school-services.png"
                                         alt="commuter-school-services.png" />
-                                    <p>weddings</p>
+                                    <p class="text-center">weddings</p>
                                 </span><span><img
                                         src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/Airport-transfer-service.png"
                                         alt="Airport-transfer-service.png" />
@@ -150,10 +147,8 @@
         </div>
     </section>
     <!--  -->
-    <!-- Projects-->
     <section class="projects-section" id="projects">
         <div class="container px-4 px-lg-5">
-            <!-- Featured Project Row-->
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0"
                         src="public/css/images/HD-wallpaper-us-bank-stadium-minneapolis-evening-sunset-minneapolis-cityscape-minneapolis-skyscrapers-minneapolis-panorama-minnesota-usa-minnesota-vikings-stadium-nfl.jpg"
@@ -165,10 +160,8 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Project One Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/nightcity.jpeg" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/nightcity.jpeg" style="height: 100%;" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
@@ -181,9 +174,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Project Two Row-->
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/plane.jpeg" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/plane.jpeg" style="height: 100%;" alt="..." /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
@@ -210,21 +202,16 @@
 
                 <ul class="list-unstyled my-5 text-small text-left">
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Experienced Driver
+                        <i class="fa fa-check mr-2 text-primary"></i>Round-the-Clock Availability
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Available-Weekdays
+                        <i class="fa fa-check mr-2 text-primary"></i> Quick Response Times
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> complete Sticfaction
+                        <i class="fa fa-check mr-2 text-primary"></i> City-Wide Coverage
                     </li>
-                    <li class="mb-3 text-muted">
-                        <i class="fa fa-times mr-2"></i>
-                        <del>Available-Everyday</del>
-                    </li>
-                    <li class="mb-3 text-muted">
-                        <i class="fa fa-times mr-2"></i>
-                        <del>24 hour</del>
+                    <li class="mb-3">
+                        <i class="fa fa-check mr-2 text-primary"></i> Clean and Comfortable Cabs
                     </li>
                     <li class="mb-3 text-muted">
                         <i class="fa fa-times mr-2"></i>
@@ -247,24 +234,19 @@
 
                 <ul class="list-unstyled my-5 text-small text-left">
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Experienced Driver
+                        <i class="fa fa-check mr-2 text-primary"></i> All Taxi Perks Included
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Available 24/7
+                        <i class="fa fa-check mr-2 text-primary"></i> Complimentary Wi-Fi
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> complete Sticfaction
+                        <i class="fa fa-check mr-2 text-primary"></i> Spacious, Luxury Interiors
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Special Discounts
+                        <i class="fa fa-check mr-2 text-primary"></i> Pre-booked and Scheduled Rides
                     </li>
-                    <li class="mb-3 text-muted">
-                        <i class="fa fa-times mr-2"></i>
-                        <del>24 hour cancelation</del>
-                    </li>
-                    <li class="mb-3 text-muted">
-                        <i class="fa fa-times mr-2"></i>
-                        <del>BookOnline</del>
+                    <li class="mb-3">
+                        <i class="fa fa-check mr-2 text-primary"></i>  Professional Chauffeurs
                     </li>
                 </ul>
                 <a href="form.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
@@ -283,23 +265,23 @@
 
                 <ul class="list-unstyled my-5 text-small text-left">
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Experienced Driver
+                        <i class="fa fa-check mr-2 text-primary"></i> All Taxi and Town Car Perks Included
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Available 24/7
+                        <i class="fa fa-check mr-2 text-primary"></i> Premium, Luxury SUV Models
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> complete Sticfaction
+                        <i class="fa fa-check mr-2 text-primary"></i> Complimentary Refreshments
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Special Discounts
+                        <i class="fa fa-check mr-2 text-primary"></i> Onboard Entertainment Systems
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i> Luxury Vehical
+                        <i class="fa fa-check mr-2 text-primary"></i> Extra Legroom and Comfort
                     </li>
                     <li class="mb-3 text-muted">
                         <i class="fa fa-times mr-2"></i>
-                        <del>Must Book Online</del>
+                        <del>Short Notice</del>
                     </li>
                 </ul>
                 <a href="form.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
@@ -349,10 +331,6 @@
                                     <div class="fw-bolder">Form submission successful!</div>
                                 </div>
                             </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage">
                                 <div class="text-center text-danger mb-3 mt-2">Error sending message!</div>
                             </div>
@@ -366,9 +344,7 @@
     <footer class="footer bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; 2023 Total Town Car Service. All rights reserved.</div>
     </footer>
-    <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
     <script src="public/js/scripts.js"></script>
     <script src="public/js/nav.js"></script>
      <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
