--- a/reviews.html
+++ b/reviews.html
@@ -34,10 +34,10 @@
             <a class="nav-link text-light" id="nav" href="form.html">Book Now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light disabled" href="about.html">About Us</a>
+            <a class="nav-link text-light" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light disabled" href="#">Pricing</a>
+            <a class="nav-link text-light" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light active" href="reviews.html">Reviews</a>
@@ -55,8 +55,8 @@
       <div class="navbar-nav">
         <a class="nav-link text-center active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-center" href="form.html">Book Now</a>
-        <a class="nav-link text-center disabled" href="about.html">About Us</a>
-        <a class="nav-link text-center disabled" href="#">Pricing</a>
+        <a class="nav-link text-center" href="about.html">About Us</a>
+        <a class="nav-link text-center" href="pricing.html">Pricing</a>
         <a class="nav-link text-center" href="reviews.html">Reviews</a>
         <div class="custom-separator mx-auto bg-primary"></div>
       </div>
@@ -99,11 +99,15 @@
                     <option value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</option>
                   </select>
                 </div>
+                 <div class="form-group">
+                  <label for="comment">Subject:</label>
+                  <input id="subject" rows="5" class="form-control" required></input>
+                </div>
                 <div class="form-group">
                   <label for="comment">Comment:</label>
                   <textarea id="comment" rows="5" class="form-control" required></textarea>
                 </div>
-              
+               
               </form>
             </section>
 
@@ -120,296 +124,73 @@
       <div id="reviews-list"></div>
     </section>
     <section class="review">
-      <h2>Great Service!</h2>
-      <p>Total Town Car Service provided excellent service. The staff was friendly and professional. They fixed my car
-        quickly and it runs perfectly now. I highly recommend this company!</p>
+      <h2>Outstanding Service!</h2>
+      <p>I've used TTCS on several occasions and every time they exceeded my expectations. The drivers are professional, punctual, and always go the extra mile to ensure passenger comfort. The vehicles are well-maintained and clean, which makes for a very enjoyable journey. Would recommend TTCS to anyone looking for a reliable car service in Minneapolis.</p>
+      <div class="rating">
+        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+        <span class="score">5.0</span>
+      </div>
+      <div class="reviewer">
+        <p>Reviewed by John Smith on 06/01/21, 12:03:16 AM</p>
+      </div>
+    </section>
+
+    <section class="review">
+      <h2>Good Experience Overall</h2>
+      <p>I recently used Total Town Car Service for a business trip and was quite impressed. The driver was courteous and arrived on time. The car was clean and comfortable. I deducted one star because the booking process was a bit confusing, but other than that, it was a good experience. I wouldn't hesitate to use their services again.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
         <span class="score">4.0</span>
       </div>
       <div class="reviewer">
-        <p>Reviewed by Jane Doe on June 15, 2022</p>
+        <p>Reviewed by Laura James on 03/20/22, 3:22:13 PM</p>
       </div>
     </section>
 
     <section class="review">
-      <h2>Highly Recommended!</h2>
-      <p>I had an amazing experience with Total Town Car Service. The staff was very professional and they did a great
-        job on my car. I would highly recommend this company to anyone looking for quality car service.</p>
+      <h2>Excellent Service!</h2>
+      <p> I hired TTCS for transportation to and from the airport. The service was impeccable. Not only was the driver early to pick me up, but he also helped with my heavy luggage. The ride was smooth and the driver was very knowledgeable about the best routes to avoid traffic. Highly recommended!</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
         <span class="score">5.0</span>
       </div>
       <div class="reviewer">
-        <p>Reviewed by John Smith on May 10, 2022</p>
+        <p>Reviewed by Michael Green on 12/10/22, 07:11:59 AM</p>
       </div>
     </section>
-
     <section class="review">
-      <h2>Excellent Work!</h2>
-      <p>Total Town Car Service did an excellent job fixing my car. They were very knowledgeable and friendly. I would
-        definitely recommend this company to anyone in need of car repairs.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Sarah Johnson on April 2, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Excellent Service</h2>
-      <p>I had an amazing experience with Luxury Transportation. The driver was very professional and courteous, and the
-        car was clean and comfortable. I would highly recommend this company to anyone looking for a luxury
-        transportation service.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Sarah Thompson on February 1, 2023</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Top Notch Service</h2>
-      <p>My experience with Luxury Transportation was exceptional. The driver was prompt and professional, and the car
-        was immaculate. The ride was smooth and comfortable, and I arrived at my destination feeling refreshed and
-        relaxed. I highly recommend this company to anyone in need of luxury transportation.</p>
+      <h2>Comfortable Ride</h2>
+      <p> I had a pleasant experience with TTCS. The booking was simple and the driver arrived promptly. The car was clean and the ride was comfortable. The driver could have been a bit friendlier, but overall, it was a positive experience and I would use their service again.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
         <span class="score">4.0</span>
       </div>
       <div class="reviewer">
-        <p>Reviewed by John Williams on January 22, 2023</p>
+        <p>Reviewed by Patricia Wilson on 08/15/22, 1:33:53 PM</p>
       </div>
     </section>
-
     <section class="review">
-      <h2>Exceptional Experience</h2>
-      <p>I recently used Luxury Transportation for a business trip, and I was extremely impressed with their service.
-        The driver was knowledgeable and professional, and the car was top-notch. I arrived at my meetings feeling
-        relaxed and ready to go. I highly recommend this company to anyone looking for a luxury transportation service.
-      </p>
+      <h2>Professional and Reliable</h2>
+      <p> As a frequent traveler, I've used many car services, and I must say, Total Town Car Service stands out. Their drivers are always on time, professional, and the cars are always clean. They make my commute to and from the airport stress-free. I would highly recommend their services to anyone in need of reliable transportation.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
         <span class="score">5.0</span>
       </div>
       <div class="reviewer">
-        <p>Reviewed by David Lee on January 15, 2023</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Amazing Service</h2>
-      <p>I had an amazing experience with Luxury Transportation. The driver was very friendly and helpful, and the car
-        was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my destination feeling
-        relaxed and refreshed. I highly recommend this company to anyone looking for a luxury transportation service.
-      </p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Michael Johnson on January 5, 2023</p>
+        <p>Reviewed by David Johnson on 01/30/23, 08:30:19 PM</p>
       </div>
     </section>
     <section class="review">
-      <h2>Great Service</h2>
-      <p>Luxury Transportation provided great service for my wedding. The driver was on time and professional, and the
-        car was beautiful. The ride was smooth and comfortable, and we arrived at the wedding venue feeling relaxed and
-        ready to go. I highly recommend this company to anyone in need of luxury transportation for their special
-        events.</p>
+      <h2>Dependable and Efficient</h2>
+      <p>I had to book a last-minute ride to the airport and I'm glad I chose TTCS. The booking process was quick and easy. The driver arrived on time, even though it was rush hour, and I made it to the airport in good time. I wish the car had been a bit cleaner, but it was a minor issue compared to their overall efficient service.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
-        <span class="score">4.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Emily Brown on January 10, 2023</p>
-      </div>
-    </section>
-
-
-    <section class="review">
-      <h2>Exceptional Service</h2>
-      <p>My experience with Luxury Transportation was exceptional. The driver was professional and courteous, and the
-        car was clean and comfortable. The ride was smooth and enjoyable, and I arrived at my destination feeling
-        refreshed and relaxed. I highly recommend this company to anyone looking for a luxury transportation service.
-      </p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
         <span class="score">5.0</span>
       </div>
       <div class="reviewer">
-        <p>Reviewed by Lisa Taylor on December 30, 2022</p>
+        <p>Reviewed by Sarah Williams on 06/10/23, 11:43:56 PM</p>
       </div>
     </section>
-
-    <section class="review">
-      <h2>Excellent Experience</h2>
-      <p>I had an excellent experience with Luxury Transportation. The driver was very professional and knowledgeable,
-        and the car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my
-        destination feeling refreshed and relaxed. I highly recommend this company to anyone looking for a luxury
-        transportation service.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by James Davis on December 25, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Great Service</h2>
-      <p>Luxury Transportation provided great service for my airport transfer. The driver was on time and professional,
-        and the car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at the airport
-        feeling relaxed and refreshed. I highly recommend this company to anyone in need of luxury transportation for
-        their airport transfers.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Olivia Jackson on December 20, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Excellent Service</h2>
-      <p>My experience with Luxury Transportation was excellent. The driver was very professional and courteous, and the
-        car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my destination
-        feeling relaxed and refreshed. The customer service was also exceptional, with the staff going above and beyond
-        to ensure that all of my needs were met. I highly recommend this company to anyone looking for a luxury
-        transportation service.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Sarah Lee on December 15, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Outstanding Service</h2>
-      <p>Luxury Transportation provided outstanding service for my wedding day. The driver arrived on time and was very
-        professional and courteous, and the car was beautifully decorated and very luxurious. The ride was smooth and
-        enjoyable, and we arrived at the wedding venue feeling relaxed and excited. I highly recommend this company for
-        any special event transportation needs.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Rachel Smith on December 10, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Highly Recommend</h2>
-      <p>I highly recommend Luxury Transportation for anyone looking for a reliable and luxurious transportation
-        service. The driver was very professional and courteous, and the car was very luxurious and comfortable. The
-        ride was smooth and enjoyable, and I arrived at my destination feeling relaxed and refreshed. Overall, a great
-        experience.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by David Johnson on December 5, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Great Customer Service</h2>
-      <p>The customer service provided by Luxury Transportation was excellent. The staff was very friendly and helpful,
-        and they went above and beyond to ensure that all of my transportation needs were met. The driver was also very
-        professional and courteous, and the car was very luxurious and comfortable. I highly recommend this company to
-        anyone in need of luxury transportation services.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Elizabeth Jones on December 1, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Excellent Company</h2>
-      <p>Luxury Transportation is an excellent company that provides top-notch transportation services. The driver was
-        very professional and courteous, and the car was very luxurious and comfortable. The ride was smooth and
-        enjoyable, and I arrived at my destination feeling relaxed and refreshed. I highly recommend this company to
-        anyone in need of luxury transportation services.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;★</span>
-        <span class="score">4.5</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by John Doe on November 27, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Great Experience</h2>
-      <p>I had a great experience with Luxury Transportation. The driver was very professional and courteous, and the
-        car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my destination
-        feeling relaxed and refreshed. I would definitely use this company again in the future.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Jane Smith on November 22, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Amazing Service</h2>
-      <p>The service provided by Luxury Transportation was amazing. The driver was very professional and courteous, and
-        the car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my destination
-        feeling relaxed and refreshed. I would definitely use this company again in the future.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Mike Johnson on November 17, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Top-Notch Service</h2>
-      <p>The service provided by Luxury Transportation was top-notch. The driver was very professional and courteous,
-        and the car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my
-        destination feeling relaxed and refreshed. I would highly recommend this company to anyone in need of luxury
-        transportation services.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by Emily Brown on November 12, 2022</p>
-      </div>
-    </section>
-
-    <section class="review">
-      <h2>Excellent Experience</h2>
-      <p>I had an excellent experience with Luxury Transportation. The driver was very professional and courteous, and
-        the car was very luxurious and comfortable. The ride was smooth and enjoyable, and I arrived at my destination
-        feeling relaxed and refreshed. I would definitely use this company again in the future.</p>
-      <div class="rating">
-        <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
-        <span class="score">5.0</span>
-      </div>
-      <div class="reviewer">
-        <p>Reviewed by James Wilson on November 7, 2022</p>
-      </div>
-    </section>
-
-
   </main>
 
 
