--- a/form.html
+++ b/form.html
@@ -18,9 +18,6 @@
     <div id="preloader">
       <div class="loader"></div>
     </div>
-    
-    <!-- Rest of your HTML content here -->
-    
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -39,10 +36,10 @@
               <a class="nav-link text-light active" id="nav" href="form.html">Book Now</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light disabled" href="about.html">About Us</a>
+              <a class="nav-link text-light" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light disabled" href="#">Pricing</a>
+              <a class="nav-link text-light" href="pricing.html">Pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light " href="reviews.html">Reviews</a>
@@ -61,8 +58,8 @@
     <a class="nav-link text-center active" aria-current="page" href="index.html">Home</a>
     <a class="nav-link text-center" href="form.html">Book Now</a>
       <div class="custom-separator mx-auto bg-primary"></div>
-    <a class="nav-link text-center disabled" href="about.html">About Us</a>
-    <a class="nav-link text-center disabled" href="#">Pricing</a>
+    <a class="nav-link text-center" href="about.html">About Us</a>
+    <a class="nav-link text-center" href="pricing.html">Pricing</a>
     <a class="nav-link text-center" href="reviews.html">Reviews</a>
 </div>
 </div>
