--- a/pricing.html
+++ b/pricing.html
@@ -48,10 +48,10 @@
             <a class="nav-link text-light" id="nav" href="form.html">Book Now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light active" href="about.html">About Us</a>
+            <a class="nav-link text-light" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="pricing.html">Pricing</a>
+            <a class="nav-link text-light active" href="pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light " href="reviews.html">Reviews</a>
@@ -69,9 +69,9 @@
       <div class="navbar-nav">
         <a class="nav-link text-center " aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-center" href="form.html">Book Now</a>
-        <a class="nav-link text-center active" href="about.html">About Us</a>
-                <div class="custom-separator mx-auto bg-primary"></div>
-        <a class="nav-link text-center" href="pricing.html">Pricing</a>
+        <a class="nav-link text-center" href="about.html">About Us</a>
+        <a class="nav-link text-center active" href="#">Pricing</a>
+          <div class="custom-separator mx-auto bg-primary"></div>
         <a class="nav-link text-center" href="reviews.html">Reviews</a>
       </div>
     </div>
@@ -81,16 +81,30 @@
   <p id="countdown"></p>
   
   <script>
+  // Set the date we're counting down to
   var countDownDate = new Date("Dec 31, 2023 00:00:00").getTime();
+  
+  // Update the count down every 1 second
   var countdownfunction = setInterval(function() {
-        var now = new Date().getTime();
-      var distance = countDownDate - now;
-      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  
+    // Get today's date and time
+    var now = new Date().getTime();
+  
+    // Find the distance between now and the count down date
+    var distance = countDownDate - now;
+  
+    // Time calculations for days, hours, minutes and seconds
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
     var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-      document.getElementById("countdown").innerHTML = days + "d " + hours + "h "+ minutes + "m " + seconds + "s ";
-      if (distance < 0) {
+  
+    // Display the result in the element with id="countdown"
+    document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+    + minutes + "m " + seconds + "s ";
+  
+    // If the count down is finished, write some text 
+    if (distance < 0) {
       clearInterval(countdownfunction);
       document.getElementById("countdown").innerHTML = "EXPIRED";
     }
