--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-body-none fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img
+            <a class="navbar-brand" href="index.html"><img
                     src="https://static.vecteezy.com/system/resources/previews/009/121/835/non_2x/ttc-logo-ttc-letter-ttc-letter-logo-design-initials-ttc-logo-linked-with-circle-and-uppercase-monogram-logo-ttc-typography-for-technology-business-and-real-estate-brand-vector.jpg"
                     alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
@@ -47,7 +47,7 @@
                         <a class="nav-link text-light" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="pricing.html">Pricing</a>
+                        <a class="nav-link text-light" href="pricing.html">Estimate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light " href="reviews.html">Reviews</a>
@@ -67,7 +67,7 @@
                 <div class="custom-separator mx-auto bg-primary"></div>
                 <a class="nav-link text-center" href="form.html">Book Now</a>
                 <a class="nav-link text-center" href="about.html">About Us</a>
-                <a class="nav-link text-center" href="pricing.html">Pricing</a>
+                <a class="nav-link text-center" href="pricing.html">Estimate</a>
                 <a class="nav-link text-center" href="reviews.html">Reviews</a>
             </div>
         </div>
